# text-model-catalog

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
examples/: generate_invoice_openai.py  generate_schema.sh  validate_invoice.py  validate_lab_result.py  validate_order.py
scripts/: generate_schema.py
tests/: test_invoice.py  test_models_import.py
text_model_catalog/: __init__.py
text_model_catalog/commerce/: __init__.py  order.py
text_model_catalog/finance/: __init__.py  invoice.py  product.py
text_model_catalog/healthcare/: __init__.py  lab_result.py
text_model_catalog/legal/: __init__.py  employment_contract.py
text_model_catalog/logistics/: __init__.py  shipment.py
